--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -269,7 +269,7 @@
     <string name="tls_decryption_starting">TLS decryption is starting…</string>
     <string name="tls_decryption_running">TLS decryption is running</string>
     <string name="traffic_inspection">Traffic inspection</string>
-    <string name="mitm_start_failed">Could not start the mitm service. Reinstall the mitm addon and retry</string>
+    <string name="mitm_start_failed">Could not start the mitm service. Try to open the mitm addon app manually and retry</string>
     <string name="mitm_setup_wizard">Mitm setup wizard</string>
     <string name="install_action">Install</string>
     <string name="export_action">Export</string>
@@ -460,4 +460,5 @@
     <string name="write_ext_storage_failed">Write to external storage failed. Check the app log for details</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="mitm_addon_autostart_workaround">Connection to the mitm addon failed. As a workaround, you can try to open the mitm addon app and then go back to PCAPdroid without closing it. Do you want to open it now?</string>
 </resources>
