--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -210,7 +210,7 @@
     <string name="can_use_purchased_feature">Теперь вы можете пользоваться приобретенными возможностями</string>
     <string name="capture_all_apps">Захватывать траффик всех приложений</string>
     <string name="hidden_connections_help">Список правил для скрытия элементов из списка соединений, чтобы сфокусироваться только на нужном</string>
-    <string name="enable_socks5_proxy_summary">Перенаправляет все TCP соединения на указанный SOCKS5 прокси</string>
+    <string name="enable_socks5_proxy_summary">Перенаправляет все TCP соединения на SOCKS5 прокси</string>
     <string name="malware_whitelist_help">Определенный пользователем белый список для подавления обнаружения вредоносов. Удерживайте вредоносное соединение, чтобы создать правило согласно которому данное соединение не будет считаться вредоносным</string>
     <string name="decryption_no_filter_warn">При расшифровке TLS выберите целевое приложение или используйте белый список дешифрования, чтобы избежать потери соединения с интернетом</string>
     <string name="traffic_dump">Дамп траффика</string>
@@ -276,7 +276,7 @@
     <string name="app_info">Информация о приложении</string>
     <string name="export_ca_certificate">Экспортируйте корневой сертификат PCAPdroid, откройте в Android настройки \"Шифрование и учетные данные\" и выберите установку в качестве \"Сертификат ЦС\"</string>
     <string name="socks5_info">SOCKS5 прокси: %1$s:%2$d</string>
-    <string name="mitm_start_failed">Не удалось запустить mitm сервис. Переустановите mitm дополнение и повторите попытку</string>
+    <string name="mitm_start_failed">Не удалось запустить mitm сервис. Попробуйте открыть вручную mitm дополнение и повторите попытку</string>
     <string name="install_ca_certificate">Установите корневой сертификат PCAPdroid, выбрав \"VPN и приложения\". Android запросит ваш код или пароль блокировки экрана</string>
     <string name="checking_the_certificate">Проверяем сертификат…</string>
     <string name="cert_installed_correctly">Корневой сертификат установлен</string>
@@ -340,7 +340,7 @@
 \nВам необходимо сперва скачать базу данных геолокации из настроек приложения</string>
     <string name="app_intro_traffic_inspection">Просматривать HTTP запросы, ответы и необработанные данные легко, благодаря встроенным декодерам
 \n
-\nПопалось зашифрованное соединение\? Вы можете включить<a href="%1$s">дешифрование TLS</a> чтобы получить дешифрованные данные</string>
+\nПопалось зашифрованное соединение\? Вы можете включить <a href="%1$s">дешифрование TLS</a> чтобы получить дешифрованные данные</string>
     <string name="allowed_connection_filter">Разрешенные</string>
     <string name="unblock_for_n_hours">Разблокировать на %1$dч</string>
     <string name="unblock_permanently">Разблокировать навсегда</string>
@@ -446,4 +446,22 @@
     <string name="total_bytes">Всего байт</string>
     <string name="sort_by">Сортировать по</string>
     <string name="write_ext_storage_failed">Запись на внешнее устройство хранения не удалась. Подробности в журнале приложения</string>
+    <string name="socks5_auth_summary">Аутентификация в прокси через имя пользователя и пароль</string>
+    <string name="socks5_summary">Настроить перенаправление на SOCKS5 прокси</string>
+    <string name="socks5_redirection">SOCKS5 перенаправление</string>
+    <string name="username">Имя пользователя</string>
+    <string name="password">Пароль</string>
+    <string name="mitm_addon_autostart_workaround">Соединение с mitm дополнением не удалось. Вы можете попробовать открыть приложение mitm дополнения и затем, не закрывая его, вернуться в PCAPdroid. Вы хотите открыть его сейчас\?</string>
+    <string name="qr_info_text">Установите PCAPdroid из Google Play и отсканируйте этот QR код</string>
+    <string name="invalid_license">Некорректная лицензия</string>
+    <string name="connection_error">Ошибка соединения: %1$s</string>
+    <string name="qr_purchase_required">Приобретите unlock token, чтобы продолжить активацию QR кода</string>
+    <string name="requesting_license">Запрашивается лицензионный код, пожалуйста подождите</string>
+    <string name="license_activation_ok">Активация лицензии завершена</string>
+    <string name="license_error">Ошибка генерации лицензии [%1$d]: %2$s</string>
+    <string name="qr_license_confirm">Вы хотите сгененировать лицензию для устройства \"%1$s\" используя следующий unlock token\?</string>
+    <string name="activate_via_qr_code">Активировать с помощью QR кода</string>
+    <string name="license_limit_reached">Достигнут лимит лицензий для данного unlock token. Приобретите новый token, чтобы сгенерировать больше лицензий</string>
+    <string name="qr_code_expired">Срок действия QR кода истек. Сгенерируйте новый QR код и повторите попытку</string>
+    <string name="socks5_auth">Аутентификация SOCKS5</string>
 </resources>
